unpackaged/main/default/objects/Lead/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <label>Affiliation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>