unpackaged/main/default/objects/Lead/fields/Alternate_Company_Names__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Company_Names__c</fullName>
    <label>Alternate Company Names</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>