unpackaged/main/default/objects/Lead/fields/Assign_Lead_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_Lead_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spoke With</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>