unpackaged/main/default/objects/Lead/fields/Canadian_VW_List_Highlighted__c.field-meta.xml
<CustomField>
    <fullName>Canadian_VW_List_Highlighted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canadian VW List- Highlighted</label>
    <type>Checkbox</type>
</CustomField>