unpackaged/main/default/objects/Lead/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>