unpackaged/main/default/objects/Lead/fields/Comment_Capture__c.field-meta.xml
<CustomField>
    <fullName>Comment_Capture__c</fullName>
    <description>comments left from a user on a Marketo form</description>
    <label>Comment Capture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>