unpackaged/main/default/objects/Lead/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <label>Consultant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>John Ahlstrom</fullName>
            </value>
            <value>
                <fullName>Tony Albertson</fullName>
            </value>
            <value>
                <fullName>Ron Caruso</fullName>
            </value>
            <value>
                <fullName>Gregory Criss</fullName>
            </value>
            <value>
                <fullName>Tom Gietl</fullName>
            </value>
            <value>
                <fullName>John Gilbert</fullName>
            </value>
            <value>
                <fullName>Dennis Gregg</fullName>
            </value>
            <value>
                <fullName>Garry House</fullName>
            </value>
            <value>
                <fullName>John Maddock</fullName>
            </value>
            <value>
                <fullName>Bruce Mennella</fullName>
            </value>
            <value>
                <fullName>Don Rothrauff</fullName>
            </value>
            <value>
                <fullName>Paul Stowe</fullName>
            </value>
            <value>
                <fullName>Terry Wichmann</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>