unpackaged/main/default/objects/Lead/fields/Contract_Signed_On_Site__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_On_Site__c</fullName>
    <label>Contract Signed On Site?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes – DocuSign</fullName>
                <isActive>false</isActive>
                <label>Yes – DocuSign</label>
            </value>
            <value>
                <fullName>Yes – Paper</fullName>
                <isActive>false</isActive>
                <label>Yes – Paper</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>