unpackaged/main/default/objects/Lead/fields/Created_By_Department__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Department__c</fullName>
    <formula>CreatedBy.Profile.Name &amp; IF(ISNULL( CreatedBy.UserRoleId ), &quot;&quot;, &quot; - &quot; &amp; CreatedBy.UserRole.Name)</formula>
    <inlineHelpText>Indicates the Business Unit to which the &#39;Created By&#39; User belongs.</inlineHelpText>
    <label>Created By Department</label>
    <type>Text</type>
</CustomField>