unpackaged/main/default/objects/Lead/fields/Data_for_Prof_Comp__c.field-meta.xml
<CustomField>
    <fullName>Data_for_Prof_Comp__c</fullName>
    <label>Already have Data for Profile Comparison</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Binary</valueSetName>
    </valueSet>
</CustomField>