unpackaged/main/default/objects/Lead/fields/Date_Time_Stamp_Can_Spam__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Stamp_Can_Spam__c</fullName>
    <description>Date the Canadian customer declined any further &quot;spam&quot; marketing emails</description>
    <label>Date/Time Stamp (CASL)</label>
    <type>DateTime</type>
</CustomField>