unpackaged/main/default/objects/Lead/fields/Dealer_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Number__c</fullName>
    <label>Dealer Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>