unpackaged/main/default/objects/Lead/fields/Dealership_Departments__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Departments__c</fullName>
    <label>Dealership Departments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NEW VEHICLE SALES</fullName>
            </value>
            <value>
                <fullName>USED VEHICLE SALES</fullName>
            </value>
            <value>
                <fullName>FINANCE AND INSURANCE</fullName>
            </value>
            <value>
                <fullName>SERVICE</fullName>
            </value>
            <value>
                <fullName>PARTS DEPARTMENT</fullName>
            </value>
            <value>
                <fullName>BODY SHOP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>