unpackaged/main/default/objects/Lead/fields/Demand_Tools_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Demand_Tools_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for mass modifying records to kick off workflows and triggers based on a change in the record. A Demand Tools load is made and this check box is mass checked or unchecked to force a change to the record. This field will exist in all objects over time.</description>
    <label>Demand Tools Trigger</label>
    <type>Checkbox</type>
</CustomField>