unpackaged/main/default/objects/Lead/fields/Demo_Completed__c.field-meta.xml
<CustomField>
    <fullName>Demo_Completed__c</fullName>
    <label>Demo Completed</label>
    <type>Date</type>
</CustomField>