unpackaged/main/default/objects/Lead/fields/Department_NCM_Classification__c.field-meta.xml
<CustomField>
    <fullName>Department_NCM_Classification__c</fullName>
    <label>Department (NCM Classification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCM_Department</valueSetName>
    </valueSet>
</CustomField>