unpackaged/main/default/objects/Lead/fields/DMS_Deprecated__c.field-meta.xml
<CustomField>
    <fullName>DMS_Deprecated__c</fullName>
    <label>DMS Deprecated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACS</fullName>
            </value>
            <value>
                <fullName>ADAM</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>Arkona</fullName>
            </value>
            <value>
                <fullName>ASI</fullName>
            </value>
            <value>
                <fullName>AutoManager</fullName>
            </value>
            <value>
                <fullName>Automate</fullName>
            </value>
            <value>
                <fullName>Autoselect</fullName>
            </value>
            <value>
                <fullName>AutoSoft</fullName>
            </value>
            <value>
                <fullName>Autostar</fullName>
            </value>
            <value>
                <fullName>CDK</fullName>
            </value>
            <value>
                <fullName>Dealer Built</fullName>
            </value>
            <value>
                <fullName>DealerStar</fullName>
            </value>
            <value>
                <fullName>Dealer Track</fullName>
            </value>
            <value>
                <fullName>DPC</fullName>
            </value>
            <value>
                <fullName>DT</fullName>
            </value>
            <value>
                <fullName>EDS</fullName>
            </value>
            <value>
                <fullName>Infinitinet</fullName>
            </value>
            <value>
                <fullName>Lightyear</fullName>
            </value>
            <value>
                <fullName>Micro21</fullName>
            </value>
            <value>
                <fullName>MPK</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>Own L6</fullName>
            </value>
            <value>
                <fullName>OWN Patec</fullName>
            </value>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>Procede</fullName>
            </value>
            <value>
                <fullName>R &amp; R</fullName>
            </value>
            <value>
                <fullName>Reynolds</fullName>
            </value>
            <value>
                <fullName>Star2Star</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>