unpackaged/main/default/objects/Lead/fields/Do_Not_Contact_Can_Spam__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact_Can_Spam__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Canadian anti spam laws - when checked this will trigger a date stamp</description>
    <inlineHelpText>Used for Canadian anti spam laws - when checked this will trigger a date stamp</inlineHelpText>
    <label>CASL Email Opt-In</label>
    <type>Checkbox</type>
</CustomField>