unpackaged/main/default/objects/Lead/fields/Do_Not_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Prospect__c</fullName>
    <label>Do Not Prospect</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>