unpackaged/main/default/objects/Lead/fields/Drip_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Drip_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drip Campaign</label>
    <type>Checkbox</type>
</CustomField>