unpackaged/main/default/objects/Lead/fields/Employee_Referral_name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Referral_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Referral Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>