unpackaged/main/default/objects/Lead/fields/External_Referral_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Referral_Name__c</fullName>
    <label>External Referral Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>