unpackaged/main/default/objects/Lead/fields/Form_Comments__c.field-meta.xml
<CustomField>
    <fullName>Form_Comments__c</fullName>
    <label>Form Comments</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>