unpackaged/main/default/objects/Lead/fields/Franchises_Deprecated__c.field-meta.xml
<CustomField>
    <fullName>Franchises_Deprecated__c</fullName>
    <label>Franchises - Deprecated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acura</fullName>
            </value>
            <value>
                <fullName>Audi</fullName>
            </value>
            <value>
                <fullName>Bentley</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>Buick</fullName>
            </value>
            <value>
                <fullName>Cadillac</fullName>
            </value>
            <value>
                <fullName>Chevrolet</fullName>
            </value>
            <value>
                <fullName>Chrysler</fullName>
            </value>
            <value>
                <fullName>Dodge</fullName>
            </value>
            <value>
                <fullName>Ferrari</fullName>
            </value>
            <value>
                <fullName>FIAT</fullName>
            </value>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>GEM</fullName>
            </value>
            <value>
                <fullName>GMC</fullName>
            </value>
            <value>
                <fullName>Harley-Davidson</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Hyundai</fullName>
            </value>
            <value>
                <fullName>Infiniti</fullName>
            </value>
            <value>
                <fullName>Isuzu</fullName>
            </value>
            <value>
                <fullName>Jaguar</fullName>
            </value>
            <value>
                <fullName>Jeep</fullName>
            </value>
            <value>
                <fullName>KIA</fullName>
            </value>
            <value>
                <fullName>Lamborghini</fullName>
            </value>
            <value>
                <fullName>Land Rover</fullName>
            </value>
            <value>
                <fullName>Lexus</fullName>
            </value>
            <value>
                <fullName>Lincoln</fullName>
            </value>
            <value>
                <fullName>Lotus</fullName>
            </value>
            <value>
                <fullName>Maserati</fullName>
            </value>
            <value>
                <fullName>Mazda</fullName>
            </value>
            <value>
                <fullName>Mercedes-Benz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>