unpackaged/main/default/objects/Lead/fields/LeadID_18__c.field-meta.xml
<CustomField>
    <fullName>LeadID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadID (18)</label>
    <type>Text</type>
</CustomField>