unpackaged/main/default/objects/Lead/fields/Matched_NADA_2016__c.field-meta.xml
<CustomField>
    <fullName>Matched_NADA_2016__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matched NADA 2016</label>
    <type>Checkbox</type>
</CustomField>