unpackaged/main/default/objects/Lead/fields/mkto71_Acquisition_Program_Id__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Acquisition_Program_Id__c</fullName>
    <label>Acquisition Program Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>