unpackaged/main/default/objects/Lead/fields/NADA_Lead_Info_Code__c.field-meta.xml
<CustomField>
    <fullName>NADA_Lead_Info_Code__c</fullName>
    <description>Used to transfer/hold data notes from NADA Show - this field is expected to be a one time use in 2018 to be deprecated by new capability for NADA 2019</description>
    <label>NADA Lead Info (Code)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>