unpackaged/main/default/objects/Lead/fields/NCM_Lead_Entry__c.field-meta.xml
<CustomField>
    <fullName>NCM_Lead_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCM Lead Entry</label>
    <referenceTo>NCM_Lead_Entry__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>