unpackaged/main/default/objects/Lead/fields/NCMi_interest__c.field-meta.xml
<CustomField>
    <fullName>NCMi_interest__c</fullName>
    <description>NCMi Courses</description>
    <label>NCMi Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Management I</fullName>
            </value>
            <value>
                <fullName>General Management II</fullName>
            </value>
            <value>
                <fullName>Service Management I</fullName>
            </value>
            <value>
                <fullName>Service Management II</fullName>
            </value>
            <value>
                <fullName>General Sales Management I</fullName>
            </value>
            <value>
                <fullName>General Sales Management II</fullName>
            </value>
            <value>
                <fullName>Internet/BDC Sales Mngmt I</fullName>
            </value>
            <value>
                <fullName>Internet/BDC Sales Mngmt II</fullName>
            </value>
            <value>
                <fullName>Used Vehicle Management I</fullName>
            </value>
            <value>
                <fullName>Used Vehicle Management II</fullName>
            </value>
            <value>
                <fullName>Financial Stmt Analysis Mngmt</fullName>
            </value>
            <value>
                <fullName>Advanced Financial  Mngmt II</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>