unpackaged/main/default/objects/Lead/fields/Not_Interested_20_Group__c.field-meta.xml
<CustomField>
    <fullName>Not_Interested_20_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Interested - 20 Group</label>
    <type>Checkbox</type>
</CustomField>