unpackaged/main/default/objects/Lead/fields/Not_Interested_NCMi__c.field-meta.xml
<CustomField>
    <fullName>Not_Interested_NCMi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Interested - NCMi</label>
    <type>Checkbox</type>
</CustomField>