unpackaged/main/default/objects/Lead/fields/Not_Interested_NCMi_weekly__c.field-meta.xml
<CustomField>
    <fullName>Not_Interested_NCMi_weekly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Interested - NCMi weekly</label>
    <type>Checkbox</type>
</CustomField>