unpackaged/main/default/objects/Lead/fields/Not_Interested_Travel_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Not_Interested_Travel_Solutions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Interested - Travel Solutions</label>
    <type>Checkbox</type>
</CustomField>