unpackaged/main/default/objects/Lead/fields/Not_Interested_Up_2_Speed_Blog__c.field-meta.xml
<CustomField>
    <fullName>Not_Interested_Up_2_Speed_Blog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Interested - Up 2 Speed Blog</label>
    <type>Checkbox</type>
</CustomField>