unpackaged/main/default/objects/Lead/fields/OEM_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>OEM_Active_Date__c</fullName>
    <label>OEM Active Date</label>
    <type>Date</type>
</CustomField>