unpackaged/main/default/objects/Lead/fields/OEM_id__c.field-meta.xml
<CustomField>
    <fullName>OEM_id__c</fullName>
    <label>OEM_id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>