unpackaged/main/default/objects/Lead/fields/Opportunity_Notes_Code__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Notes_Code__c</fullName>
    <formula>Assigned_To__c + &#39; - &#39;</formula>
    <label>Opportunity Notes (Code)</label>
    <type>Text</type>
</CustomField>