unpackaged/main/default/objects/Lead/fields/Opt_In_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NCM news and information, including marketing messages, training schedules, product and service announcements, and special offers</description>
    <inlineHelpText>NCM news and information, including marketing messages, training schedules, product and service announcements, and special offers</inlineHelpText>
    <label>Opt In - Marketing</label>
    <type>Checkbox</type>
</CustomField>