unpackaged/main/default/objects/Lead/fields/Opt_In_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NCM Perspectives - Quarterly newsletter that showcases successful dealer-operators</description>
    <inlineHelpText>NCM Perspectives - Quarterly newsletter that showcases successful dealer-operators</inlineHelpText>
    <label>Opt In - Newsletter</label>
    <type>Checkbox</type>
</CustomField>