unpackaged/main/default/objects/Lead/fields/Opt_In_Up2Speed__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Up2Speed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Up To Speed Blog - Twice-weekly educational articles on dealership management best practices from the NCM Institute</description>
    <inlineHelpText>Up To Speed Blog - Twice-weekly educational articles on dealership management best practices from the NCM Institute</inlineHelpText>
    <label>Opt In - Up2Speed</label>
    <type>Checkbox</type>
</CustomField>