unpackaged/main/default/objects/Lead/fields/Opt_Out_All_Email__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_All_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt Out - All Email</label>
    <type>Checkbox</type>
</CustomField>