unpackaged/main/default/objects/Lead/fields/Opt_Out_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quarterly newsletter that showcases successful dealer-operators</description>
    <inlineHelpText>Quarterly newsletter that showcases successful dealer-operators</inlineHelpText>
    <label>Opt Out - Newsletter</label>
    <type>Checkbox</type>
</CustomField>