unpackaged/main/default/objects/Lead/fields/Opt_Out_Up2Speed__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Up2Speed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Twice-weekly educational articles on dealership management best practices from the NCM Institute</description>
    <inlineHelpText>Twice-weekly educational articles on dealership management best practices from the NCM Institute</inlineHelpText>
    <label>Opt Out - Up2Speed</label>
    <type>Checkbox</type>
</CustomField>