unpackaged/main/default/objects/Lead/fields/Pardot_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Lead_Source__c</fullName>
    <label>Pardot Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>