unpackaged/main/default/objects/Lead/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner/Managing Partner/Dealer Principal</fullName>
            </value>
            <value>
                <fullName>Board Member/Chair Person</fullName>
            </value>
            <value>
                <fullName>CEO/COO/President</fullName>
            </value>
            <value>
                <fullName>CFO/Controller</fullName>
            </value>
            <value>
                <fullName>Vice President</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Director/Manager</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Not Listed</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>