unpackaged/main/default/objects/Lead/fields/Preferred_Title__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Title__c</fullName>
    <label>Preferred Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>