unpackaged/main/default/objects/Lead/fields/Score_As_Of__c.field-meta.xml
<CustomField>
    <fullName>Score_As_Of__c</fullName>
    <label>Score As Of</label>
    <type>Date</type>
</CustomField>