unpackaged/main/default/objects/Lead/fields/Score_Index__c.field-meta.xml
<CustomField>
    <fullName>Score_Index__c</fullName>
    <label>Score Index</label>
    <length>100</length>
    <type>Text</type>
</CustomField>