unpackaged/main/default/objects/Lead/fields/SMS_Text_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>SMS_Text_Opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opt In for SM Text Messages from NCM</description>
    <inlineHelpText>Opt In for SM Text Messages from NCM</inlineHelpText>
    <label>SMS Text Opt In</label>
    <type>Checkbox</type>
</CustomField>