unpackaged/main/default/objects/Lead/fields/Title_NCM_Classification__c.field-meta.xml
<CustomField>
    <fullName>Title_NCM_Classification__c</fullName>
    <label>Title (NCM Classification)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department_NCM_Classification__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>NCM_Title</valueSetName>
    </valueSet>
</CustomField>