unpackaged/main/default/objects/Lead/fields/Training_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Training_Administrator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training Administrator</label>
    <type>Checkbox</type>
</CustomField>