unpackaged/main/default/objects/Lead/fields/WebCheckBox__c.field-meta.xml
<CustomField>
    <fullName>WebCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Web Check Box General</description>
    <label>WebCheckBoxGeneral</label>
    <type>Checkbox</type>
</CustomField>