unpackaged/main/default/objects/Lead/fields/X20_Groups__c.field-meta.xml
<CustomField>
    <fullName>X20_Groups__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Id</label>
    <referenceTo>Twenty_Groups__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>