unpackaged/main/default/objects/Lead/fields/Your_current_DMSs__c.field-meta.xml
<CustomField>
    <fullName>Your_current_DMSs__c</fullName>
    <label>Your current DMSs</label>
    <length>20</length>
    <type>Text</type>
</CustomField>