unpackaged/main/default/objects/Lead/validationRules/Address_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Required</fullName>
    <active>true</active>
    <description>ensures that the Address field is filled out</description>
    <errorConditionFormula>AND(

    NOT(ISPICKVAL( Status, &quot;Open&quot; )),
    NOT(ISPICKVAL( Status, &quot;Closed&quot; )),
    NOT(ISPICKVAL( Status, &quot;Unqualified&quot; )),
    OR(
        ISBLANK(Street),
        ISBLANK(City), 
        ISBLANK(State), 
        ISBLANK(PostalCode),
        ISBLANK(Country)
    )
)</errorConditionFormula>
    <errorMessage>A Full Address is Required: Street, City, State, Postal Code, &amp; Country cannot be blank</errorMessage>
</ValidationRule>