unpackaged/main/default/objects/Lead/validationRules/Lead_Source_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
    NOT( 
        $Profile.Id = &quot;00eG0000001Mhjg&quot;
    ), 
    ISBLANK( TEXT(LeadSource ) )
)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>A Lead Source is Required</errorMessage>
</ValidationRule>